--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
+              "src/assets/styles/styles.css",
+              "src/assets/styles/custom-theme.scss"
             ],
             "scripts": []
           },
@@ -91,8 +91,8 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
+              "src/assets/styles/styles.css",
+              "src/assets/styles/custom-theme.scss"
             ],
             "scripts": []
           }
